--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html> <!--dit is de homepagina van mijn eerste site-->
 <html> <!--dit is het html element-->
     <head>
-        <title>het eerste begin</title>
+        <title>Het eerste begin</title>
         <meta charset="utf-8">
     </head>
     <body>
