--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -7,5 +7,8 @@
     </head>
     <body>
         Uitleg over het binaire stelsel
+
+         <a href="index.hmtl">Home</a> <!--link terug naar de homepage-->
+        
     </body>
 </html>
