--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -8,7 +8,7 @@
     <body>
         Uitleg over het binaire stelsel
 
-         <a href="index.hmtl">Home</a> <!--link terug naar de homepage-->
+         <a href="index.hmtl">Home</a>
         
     </body>
 </html>
