--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         Hier komt mijn eerste tekst
 
          <a href="binairstelsel.html">Uitleg binair stelsel</a>
+
+        <img src="pic_trulli.jpg" alt="Trulli" width="500" height="333">
         
     </body>
 </html>
