--- a/index.html
+++ b/index.html
@@ -1,22 +1,16 @@
+<!DOCTYPE html> <!--dit is de homepage van mijn site-->
+<html> <!--dit is het html-element-->
+  <head>
+    <title>Het eerste begin</title>
+    <meta charset="utf-8">
+  </head>
+  <body>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="binairstelsel.html">Binair stelsel</a></li>
+      <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+    </ul>
 
-<!DOCTYPE html> <!--dit is de homepagina van mijn eerste site-->
-<html> <!--dit is het html element-->
-    <head>
-        <title>Het eerste begin</title>
-        <meta charset="utf-8">
-    </head>
-    <body>
-        Hier komt mijn eerste tekst
-
-        <br>
-        <br>
-
-         <a href="binairstelsel.html">Uitleg binair stelsel</a>
-
-        <br>
-        <br>
-
-        <img src="pic_trulli.jpg" alt="Trulli" width="500" height="333">
-        
-    </body>
+    <img src="pic_trulli.jpg" alt="Trulli" width="500" height="333">
+  </body>
 </html>
