--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -1,14 +1,16 @@
-
-<!DOCTYPE html> <!--dit is de homepagina van mijn eerste site-->
-<html> <!--dit is het html element-->
-    <head>
-        <title>Binair stelsel</title>
-        <meta charset="utf-8">
-    </head>
-    <body>
-        Uitleg over het binaire stelsel
-
-         <a href="index.html">Home</a>
-        
-    </body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Binair stelsel</title>
+    <meta charset="utf-8">
+  </head>
+  <body>
+    Uitleg over het binaire stelsel
+    <br>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="binairstelsel.html">Binair stelsel</a></li>
+      <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+    </ul>
+  </body>
 </html>
