--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
   </head>
   <body>
+    Dit is de homepagina
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="binairstelsel.html">Binair stelsel</a></li>
