--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <br>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="portfolio.html">Binair stelsel</a></li>
+      <li><a href="portfolio.html">Portfolio</a></li>
       <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
     </ul>
 
