--- a/portfolio.html
+++ b/portfolio.html
@@ -1,17 +1,87 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Binair stelsel</title>
-    <link rel="stylesheet" type="text/css" href="opmaak.css">
-    <meta charset="utf-8">
-  </head>
-  <body>
-    Uitleg over het binaire stelsel
-    <br>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="binairstelsel.html">Binair stelsel</a></li>
-      <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
-    </ul>
-  </body>
+<html lang="nl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #95a9b5;
+            margin: 0;
+            padding: 0;
+        }
+
+        .container {
+            text-align: center;
+            padding: 20px;
+        }
+
+        h1 {
+            font-style: italic;
+            text-decoration: underline;
+            color: white;
+        }
+
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 20px;
+            max-width: 800px;
+            margin: 20px auto;
+        }
+
+        .button {
+            background-color: #185875;
+            color: white;
+            border: none;
+            padding: 15px 20px;
+            border-radius: 10px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .button:hover {
+            background-color: #1d91b3;
+        }
+
+        .extra-buttons {
+            margin-top: 20px;
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+        }
+
+        .footer {
+            margin-top: 20px;
+            font-size: 12px;
+            color: white;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Portfolio</h1>
+        <div class="grid">
+            <button class="button" onclick="window.location.href='opdracht1.html'">Opdracht 1</button>
+            <button class="button">Opdracht 2</button>
+            <button class="button">Opdracht 3</button>
+            <button class="button">Opdracht 4</button>
+            <button class="button">Opdracht 5</button>
+            <button class="button">Opdracht 6</button>
+            <button class="button">Opdracht 7</button>
+            <button class="button">Opdracht 8</button>
+            <button class="button">Opdracht 9</button>
+            <button class="button">Opdracht 10</button>
+            <button class="button">Opdracht 11</button>
+            <button class="button">Opdracht 12</button>
+        </div>
+        <div class="extra-buttons">
+            <button class="button">Portfolio van andere vakken</button>
+            <button class="button">Cijfers</button>
+        </div>
+        <div class="footer">Bowe van Meurs</div>
+    </div>
+</body>
 </html>
