--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="portfolio.html">Portfolio</a></li>
-      <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+      <li><a href="infotekst.html">Tekstje over AI</a></li>
     </ul>
 
     <img src="pic_trulli.jpg" alt="Trulli" width="500" height="333">
