--- a/infotekst.html
+++ b/infotekst.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
   </head>
   <body>
-    Uitleg over kleurmodellen
+    Info Tekst over AI
     <br>
     <ul>
       <li><a href="index.html">Home</a></li>
