--- a/infotekst.html
+++ b/infotekst.html
@@ -11,7 +11,7 @@
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="portfolio.html">Binair stelsel</a></li>
-      <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+      <li><a href="infotekst.html">Kleurmodellen</a></li>
     </ul>
   </body>
 </html>
