--- a/infotekst.html
+++ b/infotekst.html
@@ -10,8 +10,8 @@
     <br>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="portfolio.html">Binair stelsel</a></li>
-      <li><a href="infotekst.html">Kleurmodellen</a></li>
+      <li><a href="portfolio.html">Portfolio</a></li>
+      <li><a href="infotekst.html">Tekstje over AI</a></li>
     </ul>
   </body>
 </html>
