--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
     <div class="container">
         <h1>Portfolio</h1>
         <div class="grid">
-            <button class="button" onclick="window.location.href='opdracht1.html'">Opdracht 1</button>
+            <button class="button" onclick="window.location.href='opdracht1.html'">Architectuur</button>
             <button class="button">Opdracht 2</button>
             <button class="button">Opdracht 3</button>
             <button class="button">Opdracht 4</button>
