--- a/opdracht1.html
+++ b/opdracht1.html
@@ -1,1 +1,49 @@
+<!DOCTYPE html>
+<html lang="nl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Opdracht 1: Architectuur</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            margin: 0;
+            padding: 0;
+        }
 
+        .container {
+            text-align: center;
+            padding: 50px;
+        }
+
+        h1 {
+            color: #185875;
+            font-size: 36px;
+            margin-bottom: 20px;
+        }
+
+        .back-link {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #185875;
+            color: white;
+            text-decoration: none;
+            border-radius: 8px;
+            font-size: 16px;
+            transition: background-color 0.3s ease;
+        }
+
+        .back-link:hover {
+            background-color: #1d91b3;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Opdracht 1: Architectuur</h1>
+        <a href="portfolio.html" class="back-link">Terug naar Portfolio</a>
+    </div>
+</body>
+</html>
