--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="opmaak.css"> <!-- Koppel de CSS -->
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -61,10 +62,19 @@
     </style>
 </head>
 <body>
+    <!-- Menu bovenaan -->
+    <ul>
+        <li><a href="portfolio.html">Home</a></li>
+        <li><a href="opdracht1.html">Opdracht 1</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="#">Cijfers</a></li>
+    </ul>
+
+    <!-- Inhoud van de pagina -->
     <div class="container">
         <h1>Portfolio</h1>
         <div class="grid">
-            <button class="button" onclick="window.location.href='opdracht1.html'">Architectuur</button>
+            <button class="button" onclick="window.location.href='opdracht1.html'">Opdracht 1</button>
             <button class="button">Opdracht 2</button>
             <button class="button">Opdracht 3</button>
             <button class="button">Opdracht 4</button>
@@ -85,3 +95,4 @@
     </div>
 </body>
 </html>
+
