--- a/opdracht1.html
+++ b/opdracht1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Opdracht 1: Architectuur</title>
+    <link rel="stylesheet" href="opmaak.css"> <!-- Koppel de CSS -->
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -41,9 +42,17 @@
     </style>
 </head>
 <body>
+    <!-- Inhoud van de pagina -->
     <div class="container">
         <h1>Opdracht 1: Architectuur</h1>
+        
+        <!-- Link terug naar portfolio -->
         <a href="portfolio.html" class="back-link">Terug naar Portfolio</a>
+        
+        <!-- Link terug naar de homepagina -->
+        <br><br>
+        <a href="index.html" class="back-link">Terug naar Home</a>
     </div>
 </body>
 </html>
+
