--- a/index.html
+++ b/index.html
@@ -1,19 +1,95 @@
-<!DOCTYPE html> <!--dit is de homepage van mijn site-->
-<html> <!--dit is het html-element-->
+<!DOCTYPE html>
+<!-- Dit is de homepage van mijn site -->
+<html lang="nl">
   <head>
-    <title>Het eerste begin</title>
+    <title>Homepagina</title>
     <link rel="stylesheet" type="text/css" href="opmaak.css">
     <meta charset="utf-8">
+    <style>
+      /* Extra stijlen voor deze pagina */
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+      }
+
+      .container {
+        display: flex;
+        height: 100vh;
+      }
+
+      .left-section {
+        background: #002A3A; /* Donkerblauwe achtergrond */
+        color: white;
+        padding: 2rem;
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      }
+
+      .right-section {
+        background: white;
+        color: #002A3A; /* Tekstkleur donkerblauw */
+        padding: 2rem;
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      }
+
+      h1, h2 {
+        font-style: italic;
+        text-decoration: underline;
+      }
+
+      a.button {
+        display: inline-block;
+        padding: 10px 20px;
+        margin: 10px 0;
+        color: white;
+        background-color: #00405A; /* Blauwe knop */
+        text-decoration: none;
+        border-radius: 5px;
+      }
+
+      a.button:hover {
+        background-color: #002A3A;
+      }
+    </style>
   </head>
   <body>
-    Dit is de homepagina
-    <br>
+    <!-- Navigatiemenu bovenaan -->
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="portfolio.html">Portfolio</a></li>
       <li><a href="infotekst.html">Tekstje over AI</a></li>
     </ul>
 
-    <img src="pic_trulli.jpg" alt="Trulli" width="500" height="333">
+    <!-- Inhoud van de pagina -->
+    <div class="container">
+      <!-- Linker sectie -->
+      <div class="left-section">
+        <h1>Homepagina</h1>
+        <p>
+          <strong>Naam eigenaar:</strong> <em>Bowe van Meurs</em><br>
+          <strong>Iets over mijzelf:</strong>
+        </p>
+        <ul>
+          <li>15 jaar oud</li>
+          <li>Vwo 4 op het Vituscollege Bussum</li>
+        </ul>
+      </div>
+
+      <!-- Rechter sectie -->
+      <div class="right-section">
+        <h2>Waar gaat deze website over?</h2>
+        <p>
+          Op deze website zullen er verschillende opdrachten en teksten over gevarieerde onderwerpen komen.
+        </p>
+        <a href="portfolio.html" class="button">Ga naar Portfolio</a>
+        <a href="infotekst.html" class="button">Lees meer over AI</a>
+      </div>
+    </div>
   </body>
 </html>
