--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <h1>Welkom op mijn website</h1>
-      <p>Dit is de homepagina. Hier vind je een introductie tot de inhoud van de site.</p>
+      <p>Dit is de homepagina. Hieronder vind je mijn cijfers en een informatietekstje over AI.</p>
       
       <!-- Knoppen naar andere pagina's -->
       <button onclick="window.location.href='portfolio.html'">Portfolio</button>
