--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
       <h1>Welkom op mijn website</h1>
       <p>Dit is de homepagina. Hieronder vind je mijn cijfers en een informatietekstje over AI.</p>
       
+
+      <p>
+        Mijn naam is Bowe van Meurs. Ik ben 15 jaar oud en zit in VWO 4 op het Vituscollege Bussum. 
+        Op deze website laat ik mijn opdrachten en interesses zien.
+      </p>
+      
       <!-- Knoppen naar andere pagina's -->
       <button onclick="window.location.href='portfolio.html'">Portfolio</button>
       <button onclick="window.location.href='infotekst.html'">Tekstje over AI</button>
     </div>
   </body>
 </html>
-
