--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <h1>Welkom op mijn website</h1>
-      <p>Dit is de homepagina. Hieronder vind je mijn cijfers en een informatietekstje over AI.</p>
+      <p>Dit is de homepagina. Hieronder vind je wat informatie over mijzelf, mijn cijfers en een informatietekstje over AI.</p>
       
 
       <p>
