--- a/opdracht1.html
+++ b/opdracht1.html
@@ -8,7 +8,25 @@
 <body>
   <div class="container">
     <h1>Opdracht 1: Architectuur</h1>
-    <p>Deze opdracht gaat over het drielagenmodel. Hieronder kun je een PowerPoint downloaden waarin ik het drielagenmodel verder uitleg.</p>
+    <p>
+      Deze opdracht gaat over het <strong>drielagenmodel</strong> in de context van een mobiele telefoon. 
+      Het model verdeelt de technologie en werking van een mobiele telefoon in drie lagen: 
+      de <em>fysieke laag</em>, de <em>logische laag</em> en de <em>toepassingenlaag</em>.
+    </p>
+
+    <h2>Wat houdt het drielagenmodel in?</h2>
+    <p>
+      Het drielagenmodel biedt een overzichtelijke structuur van de complexe onderdelen en processen binnen een mobiele telefoon:
+    </p>
+    <ul>
+      <li><strong>Fysieke laag:</strong> Bevat de hardware van de telefoon, zoals de processor (CPU), het werkgeheugen (RAM/ROM), opslagmedia, randapparatuur, en verbindingen zoals kabels en interfaces.</li>
+      <li><strong>Logische laag:</strong> Hier bevindt zich het besturingssysteem (operating system), talen en compilers, en databasesystemen (DBMS).</li>
+      <li><strong>Toepassingenlaag:</strong> Omvat toepassingen zoals apps, databases en API’s, die direct door de gebruiker worden gebruikt.</li>
+    </ul>
+
+    <p>
+      Meer details over deze lagen en hun samenhang kun je vinden in de PowerPoint die hieronder beschikbaar is:
+    </p>
 
     <!-- Download link voor de PowerPoint -->
     <a href="drielagenmodel.pptx" download>Download de PowerPoint over het drielagenmodel</a>
