--- a/opdracht1.html
+++ b/opdracht1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Opdracht 1: Architectuur</title>
-  <link rel="stylesheet" href="opmaak.css">
+  <link rel="stylesheet" href="opmaak_groen.css">
 </head>
 <body>
   <div class="container">
@@ -11,7 +11,9 @@
     <p>
       Deze opdracht gaat over het <strong>drielagenmodel</strong> in de context van een mobiele telefoon. 
       Het model verdeelt de technologie en werking van een mobiele telefoon in drie lagen: 
-      de <em>fysieke laag</em>, de <em>logische laag</em> en de <em>toepassingenlaag</em>.
+      de <a href="fysiekelaag.html"><strong>fysieke laag</strong></a>, 
+      de <a href="logischelaag.html"><strong>logische laag</strong></a> en de 
+      <a href="toepassingenlaag.html"><strong>toepassingenlaag</strong></a>.
     </p>
 
     <h2>Wat houdt het drielagenmodel in?</h2>
