--- a/opdracht1.html
+++ b/opdracht1.html
@@ -26,6 +26,11 @@
       <li><a href="toepassingenlaag.html"><strong>Toepassingenlaag:</strong></a> Omvat toepassingen zoals apps, databases en API’s, die direct door de gebruiker worden gebruikt.</li>
     </ul>
 
+    <!-- Plaatje van het drielagenmodel -->
+    <div class="image-container">
+      <img src="3lagenmodel.png" alt="Drielagenmodel" class="centered-image">
+    </div>
+
     <p>
       Meer details over deze lagen en hun samenhang kun je vinden in de PowerPoint die hieronder beschikbaar is:
     </p>
