--- a/opdracht1.html
+++ b/opdracht1.html
@@ -32,7 +32,7 @@
     </div>
 
     <p>
-      Meer details over deze lagen en hun samenhang kun je vinden in de PowerPoint die hieronder beschikbaar is:
+      Meer details over deze lagen en hun samenhang kun je vinden in de interactieve PowerPoint die hieronder beschikbaar is:
     </p>
 
     <!-- Download link voor de PowerPoint -->
